feat: swagger crud letters
