# swagger.YAML
@@ -4,7 +4,7 @@ info:
   description: Documentation to API Letters to Santa.
   version: 0.1.0
 servers:
-  - url: http://localhost:3333/v1
+  - url: http://localhost:3333/api/v1
     description: server for testing
 
 components:
@@ -20,10 +20,10 @@ components:
 
 tags:
 - name: "santa"
-  description: ""
+  description: "Papai Noel"
 
 - name: "letters"
-  description: "CRUD Letters"
+  description: "CRUD Cartas"
 
   
 paths:
@@ -31,7 +31,7 @@ paths:
     post:
       tags: 
       - "santa"
-      summary: "Create a login"
+      summary: "Criar um novo Login"
       requestBody:
         content: 
           application/json:
@@ -47,16 +47,16 @@ paths:
                   type: string
                   
       responses:
-        201:
+        "201":
           success: true
-        401:
+        "401":
           $ref: "#/components/responses/UnauthorizedError"
 
   /santa/login:
     post:
       tags: 
       - "santa"
-      summary: "Authenticate with valid login"
+      summary: "Fazer login"
       requestBody:
         content: 
           application/json:
@@ -72,9 +72,9 @@ paths:
                   type: string
                   
       responses:
-        201:
+        "201":
           success: true
-        401:
+        "401":
           $ref: "#/components/responses/UnauthorizedError"
 
 
@@ -82,46 +82,230 @@ paths:
     post:
       tags: 
       - "letters"
-      summary: "Send a new letter"
-      security:
-        - bearerAuth: []
+      summary: "Enviar uma carta"
       requestBody:
         content: 
           application/json:
             schema:
               type: "object"
               required:
-                - first_name
-                - last_name
-                - address
-                - zip_code
-                - state
-                - city
-                - country
-                - body_letter
+                - "first_name"
+                - "last_name"
+                - "address"
+                - "zip_code"
+                - "state"
+                - "city"
+                - "country"
+                - "body_letter"
               properties: 
                 first_name: 
-                  type: string
+                  type: "string"
                 last_name: 
-                  type: string
+                  type: "string"
                 address: 
-                  type: string
+                  type: "string"
                 zip_code: 
-                  type: string
+                  type: "string"
                 state: 
-                  type: string
+                  type: "string"
                 city: 
-                  type: string
+                  type: "string"
                 country: 
-                  type: string
+                  type: "string"
                 body_letter: 
-                  type: string
+                  type: "string"
 
                   
       responses:
-        201:
+        "201":
           success: true
-        401:
+        "400":
+          description: "Internal server error"
+
+  /letter:
+    get:
+      tags: 
+      - "letters"
+      summary: "Lista todas as cartas"
+      security:
+        - bearerAuth: []
+      application/json:          
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Letter"      
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+
+
+  /letter/approved/{letter_id}:
+    put:
+      tags: 
+      - "letters"
+      summary: "Atualizar status para aprovada"
+      security:
+        - bearerAuth: []
+      parameters: 
+        - in: path
+          name: letter_id
+          description: "Id carta"
+          schema:
+            type: string
+          required: true  
+      requestBody:
+        content: 
+          application/json:
+            schema:
+              type: "object"
+              required:
+                - approved
+              properties: 
+                approved: 
+                  type: "boolean"                
+      responses:
+        "200":
+          description: "Success"
+        "401":
           $ref: "#/components/responses/UnauthorizedError"
       
-     
+  /letter/read/{letter_id}:
+    put:
+      tags: 
+      - "letters"
+      summary: "Atualizar status para lida"
+      security:
+        - bearerAuth: []
+      parameters: 
+        - in: path
+          name: letter_id
+          description: "Id carta"
+          schema:
+            type: string
+          required: true  
+      requestBody:
+        content: 
+          application/json:
+            schema:
+              type: "object"
+              required:
+                - read
+              properties: 
+                read: 
+                  type: "boolean"                
+      responses:
+        "200":
+          description: "Success"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+
+  /letter/read:
+    get:
+      tags: 
+      - "letters"
+      summary: "Listar todas as cartas lidas"
+      security:
+        - bearerAuth: [] 
+               
+      responses:
+        "200":
+          description: "Success"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+
+  /letter/read/not:
+    get:
+      tags: 
+      - "letters"
+      summary: "Listar todas as cartas não lidas"
+      security:
+        - bearerAuth: [] 
+               
+      responses:
+        "200":
+          description: "Success"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+      
+
+
+  /letter/approved:
+    get:
+      tags: 
+      - "letters"
+      summary: "Listar todas cartas as aprovadas"
+      security:
+        - bearerAuth: [] 
+               
+      responses:
+        "200":
+          description: "Success"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+      
+
+  /letter/approved/not:
+    get:
+      tags: 
+      - "letters"
+      summary: "Listar todas as cartas não aprovadas"
+      security:
+        - bearerAuth: [] 
+               
+      responses:
+        "200":
+          description: "Success"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+      
+
+  /letter/delete/{letter_id}:
+    delete:
+      tags: 
+      - "letters"
+      summary: "Deletar uma carta"
+      security:
+        - bearerAuth: []
+      parameters: 
+        - in: path
+          name: letter_id
+          description: "Id carta"
+          schema:
+            type: string
+          required: true             
+      responses:
+        "200":
+          description: "Success"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+
+definitions:
+  Letter:
+    type: "object"
+    properties:
+      id: 
+        type: "string" 
+      was_read: 
+        type: "boolean"
+      approved: 
+        type: "boolean"
+      first_name: 
+        type: "string"
+      last_name: 
+        type: "string"
+      address: 
+        type: "string"
+      zip_code: 
+        type: "string"
+      state: 
+        type: "string"
+      city: 
+        type: "string"
+      country: 
+        type: "string"
+      body_letter: 
+        type: "string"
+      create_at:
+        type: "date-time"
